welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: illegal start of statement
  match 
  ^BDR2:7: error: '}' expected but 'case' found.
	case  "R" => droite();
        ^BDR2:9: error: '}' expected but 'case' found.
	case  "L" => gauche();
        ^BDR2:11: error: illegal start of definition
     case  "I" => droite();
     ^BDR2:14: error: illegal start of definition
     case  "A" => avance();
     ^BDR2:15: error: illegal start of definition
	case  "B" => avance();
        ^BDR2:17: error: illegal start of definition
	case  "C" => avance();
        ^BDR2:20: error: illegal start of definition
	case  "D" => avance(4);
        ^BDR2:21: error: illegal start of definition
	case  "E" => avance(5);
        ^BDR2:22: error: illegal start of definition
	case  "F" => avance(6);		         
        ^BDR2:23: error: illegal start of definition
	case  "Y" => recule();
        ^BDR2:25: error: illegal start of definition
     case  "X" => recule();
     ^BDR2:28: error: illegal start of definition
     case  "W" => recule(4);
     ^BDR2:29: error: illegal start of definition
     case  "V" => recule(5);
     ^BDR2:30: error: illegal start of definition
     case  "U" => recule(6);
     ^BDR2:37: error: eof expected but '}' found.
	}
        ^