welcome.lessons.welcome.bdr.BDR2.scala.code
var ltr : String = ""
while(estSurMessage){
	
	ltr = litMessage() ;
  match 
	case  "Z" => recule();
	case  "R" => droite();
		        avance();
	case  "L" => gauche();
		        avance();
     case  "I" => droite();
		        droite();
		        avance();
     case  "A" => avance();
	case  "B" => avance();
		        avance();
	case  "C" => avance();
			   avance();
			   avance();
	case  "D" => avance(4);
	case  "E" => avance(5);
	case  "F" => avance(6);		         
	case  "Y" => recule();
		        recule();
     case  "X" => recule();
     	        recule();
     	        recule();
     case  "W" => recule(4);
     case  "V" => recule(5);
     case  "U" => recule(6);
	
	
	
 
	}